# ser-gawain

./: .gitignore  pyproject.toml
ser_gawain/: __main__.py  emojis.py  gawain.db
ser_gawain/commands/: crafting.py  users.py
tests/: test_crafting.py
